--- a/app/globals.css
+++ b/app/globals.css
@@ -71,3 +71,30 @@ html {
   scroll-behavior: smooth;
 }
 
+@keyframes gradient-rotate {
+  0% {
+    background-position: 0% 0%;
+  }
+  25% {
+    background-position: 100% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  75% {
+    background-position: 0% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
+.animate-circular-gradient {
+  /* background-image: linear-gradient(to left, #156e91, #1f7aa2, #2985b4, #3591c6, #429dd8, #429ee2, #469feb, #4da0f4, #5095f5, #5a8af4, #687df0, #786eea); */
+  background-image: linear-gradient(to right, #29e0d6, #00d5ed, #00c7ff, #00b5ff, #6ea0ff, #7b99f7, #8592ef, #8e8be6, #7492e7, #5998e5, #419ddf, #2da0d7);
+  background-size: 300% 300%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  animation: gradient-rotate 8s linear infinite;
+}
